--- a/static/css/style.css
+++ b/static/css/style.css
@@ -575,7 +575,7 @@ a:focus {
 }
 
 .about_section {
-background-color:grey ;}
+background-color: grey ;}
 
 .about_section .row {
   -webkit-box-align: center;
@@ -914,6 +914,8 @@ background-color:grey ;}
 .info_section {
   background-color: #252525;
   color: #ffffff;
+  height: 150px;
+
 }
 
 .info_section .info_top {
@@ -932,11 +934,11 @@ background-color:grey ;}
 .info_section .info_top .info_logo a {
   display: block;
   background-color: #ffffff;
-  padding: 20px 35px;
+  padding:20px 35px;
 }
 
 .info_section .info_top .info_logo a img {
-  width: 55px;
+  width: 10px;
 }
 
 .info_section .info_form {
@@ -993,6 +995,7 @@ background-color:grey ;}
   -webkit-transform: translateX(-100%);
           transform: translateX(-100%);
 }
+
 
 .info_section h5 {
   text-transform: uppercase;
