--- a/static/css/style.css
+++ b/static/css/style.css
@@ -574,6 +574,9 @@ a:focus {
   content: "\f106";
 }
 
+.about_section {
+background-color:grey ;}
+
 .about_section .row {
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -586,16 +589,16 @@ a:focus {
 
 .about_section .detail-box p {
   color: #999;
-  margin-top: 15px;
+  margin-top: 16px;
 }
 
 .about_section .detail-box a {
   display: inline-block;
   padding: 10px 45px;
-  background-color: #252525;
+  background-color: red;
   color: #ffffff;
   border-radius: 5px;
-  margin-top: 15px;
+  margin-top: 17px;
 }
 
 .about_section .detail-box a:hover {
