--- a/static/css/style.css
+++ b/static/css/style.css
@@ -19,7 +19,6 @@ body {
 
 .layout_padding2-bottom {
   padding-bottom: 75px;
-  background-color: #00b4d8;
 }
 
 .layout_padding-top {
@@ -31,6 +30,7 @@ body {
 }
 
 .heading_container {
+
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -577,13 +577,19 @@ a:focus {
 }
 
 .about_section {
-background-color: grey ;}
+background-color: #48cae4;
+padding: 50px;
+text-align: center;
+
+}
 
 .about_section .row {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+          text-size-adjust: 30px;
 }
+
 
 .about_section .img-box img {
   max-width: 100%;
@@ -591,20 +597,21 @@ background-color: grey ;}
 
 .about_section .detail-box p {
   color: #999;
-  margin-top: 16px;
+  margin-top: 30px;
 }
 
 .about_section .detail-box a {
   display: inline-block;
   padding: 10px 45px;
-  background-color: red;
+  background-color: #013A63;
   color: #ffffff;
   border-radius: 5px;
   margin-top: 17px;
+
 }
 
 .about_section .detail-box a:hover {
-  background-color: #0c0c0c;
+  background-color: #2A6F97;
 }
 
 .treatment_section {
