--- a/static/css/style.css
+++ b/static/css/style.css
@@ -508,6 +508,7 @@ a:focus {
 
 .book_section form .form-control::-webkit-input-placeholder {
   color: #00c6a9;
+  
 }
 
 .book_section form .form-control:-ms-input-placeholder {
@@ -580,6 +581,9 @@ a:focus {
 background-color: #48cae4;
 padding: 50px;
 text-align: center;
+font-size: 22px;
+font-family: serif;
+font-weight: bold;
 
 }
 
@@ -603,7 +607,7 @@ text-align: center;
 .about_section .detail-box a {
   display: inline-block;
   padding: 10px 45px;
-  background-color: #013A63;
+  background-color: #03045e;
   color: #ffffff;
   border-radius: 5px;
   margin-top: 17px;
