--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -11,16 +11,16 @@
 --------------------------------------------------------------*/
 body {
   font-family: "Open Sans", sans-serif;
-  color: #444444;
+  color: #2C7DA0;
 }
 
 a {
   text-decoration: none;
-  color: #5cb874;
+  color: #2C7DA0;
 }
 
 a:hover {
-  color: #80c792;
+  color: #2C7DA0;
   text-decoration: none;
 }
 
@@ -43,7 +43,7 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #5cb874;
+  background: #2C7DA0;
   width: 40px;
   height: 40px;
   border-radius: 4px;
@@ -52,12 +52,12 @@ h6 {
 
 .back-to-top i {
   font-size: 24px;
-  color: #fff;
+  color: #2C7DA0;
   line-height: 0;
 }
 
 .back-to-top:hover {
-  background: #78c48c;
+  background: #2C7DA0;
   color: #fff;
 }
 
@@ -70,7 +70,7 @@ h6 {
 # Top Bar
 --------------------------------------------------------------*/
 #topbar {
-  background: #fbfbfb;
+  background: #013A63;
   font-size: 15px;
   height: 40px;
   padding: 0;
@@ -78,16 +78,16 @@ h6 {
 
 #topbar .contact-info a {
   line-height: 0;
-  color: #444444;
+  color: white;
   transition: 0.3s;
 }
 
 #topbar .contact-info a:hover {
-  color: #5cb874;
+  color: #89C2D9;
 }
 
 #topbar .contact-info i {
-  color: #5cb874;
+  color: white;
   line-height: 0;
   margin-right: 5px;
 }
@@ -97,7 +97,7 @@ h6 {
 }
 
 #topbar .social-links a {
-  color: #6f6f6f;
+  color: white;
   padding: 4px 12px;
   display: inline-block;
   line-height: 1px;
@@ -105,7 +105,7 @@ h6 {
 }
 
 #topbar .social-links a:hover {
-  color: #5cb874;
+  color: white;
 }
 
 /*--------------------------------------------------------------
@@ -173,7 +173,7 @@ h6 {
   justify-content: space-between;
   padding: 10px 0 10px 30px;
   font-size: 15px;
-  color: #222222;
+  color: #012A4A;
   white-space: nowrap;
   transition: 0.3s;
 }
@@ -194,18 +194,18 @@ h6 {
 
 .navbar .getstarted,
 .navbar .getstarted:focus {
-  color: #5cb874;
+  color: #012A4A;
   padding: 8px 25px;
   margin-left: 30px;
   border-radius: 4px;
-  border: 2px solid #5cb874;
+  border: 2px solid #012A4A;
   transition: 0.3s;
   font-size: 14px;
 }
 
 .navbar .getstarted:hover,
 .navbar .getstarted:focus:hover {
-  background: #5cb874;
+  background: #A9D6E5;
   color: #fff;
 }
 
@@ -240,7 +240,7 @@ h6 {
 .navbar .dropdown ul a:hover,
 .navbar .dropdown ul .active:hover,
 .navbar .dropdown ul li:hover>a {
-  color: #5cb874;
+  color: #A9D6E5;
 }
 
 .navbar .dropdown:hover>ul {
@@ -276,7 +276,7 @@ h6 {
 * Mobile Navigation 
 */
 .mobile-nav-toggle {
-  color: #222222;
+  color: #A9D6E5;
   font-size: 28px;
   cursor: pointer;
   display: none;
@@ -339,7 +339,7 @@ h6 {
 .navbar-mobile a:hover,
 .navbar-mobile .active,
 .navbar-mobile li:hover>a {
-  color: #5cb874;
+  color: #A9D6E5;
 }
 
 .navbar-mobile .getstarted,
@@ -374,7 +374,7 @@ h6 {
 .navbar-mobile .dropdown ul a:hover,
 .navbar-mobile .dropdown ul .active:hover,
 .navbar-mobile .dropdown ul li:hover>a {
-  color: #5cb874;
+  color: #A9D6E5;
 }
 
 .navbar-mobile .dropdown>.dropdown-active {
@@ -387,7 +387,7 @@ h6 {
 #hero {
   width: 100%;
   height: 70vh;
-  background-color: rgba(9, 9, 9, 0.8);
+  background-color: rgba(101, 178, 255,0.8);
   overflow: hidden;
   position: relative;
 }
@@ -408,7 +408,7 @@ h6 {
 
 #hero .carousel-item::before {
   content: "";
-  background-color: rgba(45, 103, 60, 0.8);
+  background-color: rgba(18, 87, 121,0.8);
 }
 
 #hero .carousel-container {
@@ -496,7 +496,7 @@ h6 {
 
 #hero .carousel-indicators li.active {
   opacity: 1;
-  background: #5cb874;
+  background: #A9D6E5;
 }
 
 #hero .btn-get-started {
@@ -511,11 +511,11 @@ h6 {
   line-height: 1;
   color: #fff;
   animation-delay: 0.8s;
-  background: #5cb874;
+  background: #013A63;
 }
 
 #hero .btn-get-started:hover {
-  background: #6ec083;
+  background: #ade8f4;
 }
 
 @media (max-width: 992px) {
@@ -556,7 +556,7 @@ section {
 }
 
 .section-bg {
-  background-color: #f8fcf9;
+  background-color: #ade8f4;
 }
 
 .section-title {
@@ -579,7 +579,7 @@ section {
   display: block;
   width: 120px;
   height: 1px;
-  background: #ddd;
+  background: #ade8f4;
   bottom: 1px;
   left: calc(50% - 60px);
 }
@@ -590,7 +590,7 @@ section {
   display: block;
   width: 40px;
   height: 3px;
-  background: #5cb874;
+  background: #ade8f4;
   bottom: 0;
   left: calc(50% - 20px);
 }
@@ -598,7 +598,7 @@ section {
 .section-title p {
   margin-bottom: 0;
   font-size: 14px;
-  color: #919191;
+  color: #ade8f4;
 }
 
 /*--------------------------------------------------------------
@@ -621,7 +621,7 @@ section {
 }
 
 .featured-services .icon i {
-  color: #5cb874;
+  color: #ade8f4;
   font-size: 42px;
 }
 
@@ -637,7 +637,7 @@ section {
 }
 
 .featured-services .icon-box:hover .title a {
-  color: #5cb874;
+  color: #ade8f4;
 }
 
 .featured-services .description {
@@ -665,7 +665,7 @@ section {
 .about .content ul i {
   font-size: 20px;
   padding-right: 4px;
-  color: #5cb874;
+  color: #ade8f4;
 }
 
 .about .content p:last-child {
@@ -685,8 +685,8 @@ section {
 
 .why-us .content-item {
   padding: 40px;
-  border-left: 1px solid #eee;
-  border-bottom: 1px solid #eee;
+  border-left: 1px solid #ade8f4;
+  border-bottom: 1px solid #ade8f4;
   margin: -1px;
 }
 
@@ -694,7 +694,7 @@ section {
   display: block;
   font-size: 24px;
   font-weight: 400;
-  color: #6ec083;
+  color: #ade8f4;
 }
 
 .why-us .content-item h4 {
@@ -705,7 +705,7 @@ section {
 }
 
 .why-us .content-item p {
-  color: #aaaaaa;
+  color: #ade8f4;
   font-size: 15px;
   margin: 0;
   padding: 0;
@@ -739,11 +739,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #5cb874;
+  border: 1px solid #ade8f4;
 }
 
 .clients .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #5cb874;
+  background-color: #ade8f4;
 }
 
 /*--------------------------------------------------------------
@@ -782,7 +782,7 @@ section {
 
 .services .icon-box .icon svg path {
   transition: 0.5s;
-  fill: #f5f5f5;
+  fill: #ade8f4;
 }
 
 .services .icon-box h4 {
@@ -792,7 +792,7 @@ section {
 }
 
 .services .icon-box h4 a {
-  color: #222222;
+  color: #ade8f4;
   transition: ease-in-out 0.3s;
 }
 
@@ -808,7 +808,7 @@ section {
 }
 
 .services .iconbox-blue i {
-  color: #47aeff;
+  color: #ade8f4;
 }
 
 .services .iconbox-blue:hover .icon i {
@@ -816,7 +816,7 @@ section {
 }
 
 .services .iconbox-blue:hover .icon path {
-  fill: #47aeff;
+  fill: #ade8f4;
 }
 
 .services .iconbox-orange i {
@@ -883,7 +883,7 @@ section {
 # Cta
 --------------------------------------------------------------*/
 .cta {
-  background: #5cb874;
+  background: #013A63;
   padding: 80px 0;
 }
 
@@ -914,7 +914,7 @@ section {
 
 .cta .cta-btn:hover {
   background: #fff;
-  color: #5cb874;
+  color: #61A5C2;
 }
 
 @media (max-width: 1024px) {
@@ -962,7 +962,7 @@ section {
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
   color: #fff;
-  background: #5cb874;
+  background: #61A5C2;
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -1187,7 +1187,7 @@ section {
 
 .contact .info i {
   font-size: 20px;
-  color: #5cb874;
+  color: #90e0ef;
   float: left;
   width: 44px;
   height: 44px;
@@ -1211,7 +1211,7 @@ section {
   padding: 0 0 10px 60px;
   margin-bottom: 20px;
   font-size: 14px;
-  color: #555555;
+  color: #90e0ef;
 }
 
 .contact .info .social-links {
@@ -1241,7 +1241,7 @@ section {
 .contact .info .email:hover i,
 .contact .info .address:hover i,
 .contact .info .phone:hover i {
-  background: #5cb874;
+  background: #90e0ef;
   color: #fff;
 }
 
@@ -1294,7 +1294,7 @@ section {
   width: 24px;
   height: 24px;
   margin: 0 10px -6px 0;
-  border: 3px solid #18d26e;
+  border: 3px solid #90e0ef;
   border-top-color: #eee;
   animation: animate-loading 1s linear infinite;
 }
@@ -1309,7 +1309,7 @@ section {
 
 .contact .php-email-form input:focus,
 .contact .php-email-form textarea:focus {
-  border-color: #5cb874;
+  border-color: beige;
 }
 
 .contact .php-email-form input {
@@ -1321,7 +1321,7 @@ section {
 }
 
 .contact .php-email-form button[type=submit] {
-  background: #5cb874;
+  background: white;
   border: 0;
   padding: 10px 24px;
   color: #fff;
@@ -1348,7 +1348,7 @@ section {
 --------------------------------------------------------------*/
 .breadcrumbs {
   padding: 15px 0;
-  background: #fbfbfb;
+  background: #90e0ef;
   min-height: 40px;
 }
 
@@ -1379,7 +1379,7 @@ section {
 .breadcrumbs ol li+li::before {
   display: inline-block;
   padding-right: 10px;
-  color: #3c3c3c;
+  color: #90e0ef;
   content: "/";
 }
 
@@ -1401,7 +1401,7 @@ section {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  background: #090909;
+  background: #90e0ef;
   color: #fff;
   font-size: 14px;
   text-align: center;
