--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -1079,7 +1079,7 @@ section {
 }
 
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #5cb874;
+  background-color: yellow;
 }
 
 .portfolio-details .portfolio-info {
