--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -598,7 +598,7 @@ section {
 .section-title p {
   margin-bottom: 0;
   font-size: 14px;
-  color: #ade8f4;
+  color: #0e5287;
 }
 
 /*--------------------------------------------------------------
@@ -705,7 +705,7 @@ section {
 }
 
 .why-us .content-item p {
-  color: #ade8f4;
+  color: #0e5287;
   font-size: 15px;
   margin: 0;
   padding: 0;
@@ -1177,8 +1177,8 @@ section {
 # Contact
 --------------------------------------------------------------*/
 .contact .info {
-  border-top: 3px solid #5cb874;
-  border-bottom: 3px solid #5cb874;
+  border-top: 3px solid #0e5287;
+  border-bottom: 3px solid #0e5287;
   padding: 30px;
   background: #fff;
   width: 100%;
@@ -1234,7 +1234,7 @@ section {
 }
 
 .contact .info .social-links a:hover {
-  background: #5cb874;
+  background: #0e5287;
   color: #fff;
 }
 
@@ -1247,8 +1247,8 @@ section {
 
 .contact .php-email-form {
   width: 100%;
-  border-top: 3px solid #5cb874;
-  border-bottom: 3px solid #5cb874;
+  border-top: 3px solid #0e5287;
+  border-bottom: 3px solid #0e5287;
   padding: 30px;
   background: #fff;
   box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.12);
