--- a/static/css/cal.css
+++ b/static/css/cal.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  background-color:white;
+  background-color:#D4F1F4;
   
   background-size: cover;
   background-position: center;
@@ -67,7 +67,7 @@ body {
 }
 .back{
   transform:rotateY(180deg);
-  background-color:#232227;
+  background-color:##D4F1F4;
   -webkit-backface-visibility: hidden;
   -moz-backface-visibility: hidden;
   -o-backface-visibility: hidden;
@@ -75,7 +75,7 @@ body {
 }
 .front{
   text-transform:uppercase;
-  background-color:#232227;
+  background-color:white;
   -webkit-backface-visibility: hidden;
   -moz-backface-visibility: hidden;
   -o-backface-visibility: hidden;
@@ -85,7 +85,7 @@ body {
   height:100%;
   width:130px;
   float:left;
-  background-color:#4169e1;
+  background-color:#2A6F97;
   border-radius:0 6px 6px 0;
   text-align:right;
   padding:10px 30px;
@@ -100,7 +100,7 @@ body {
 }
 #date{
   font-size:50px;
-  color:#ECECE7;
+  color:#D4F1F4;
   font-family: 'Montserrat', sans-serif;
   font-weight:500;
   float:right;
@@ -111,6 +111,7 @@ body {
   color:black;
   font-family: 'Montserrat', sans-serif;
   font-weight:400;
+  color: #D4F1F4;
 }
 #month{
   float:right;
@@ -118,15 +119,16 @@ body {
   color:black;
   font-family: 'Montserrat', sans-serif;
   font-weight:200;
+  color:#D4F1F4;
 }
 .date i{
-  color:#4169e1;
+  color:#D4F1F4;
   position:absolute;
   bottom:10px;
   right:0;
 }
 .date i:hover{
-  color:#4169e1;
+  color:#D4F1F4;
   transition:.3s ease;
 }
 .month{
@@ -141,7 +143,7 @@ body {
   height: 100%;
 }
 .orangeTr{
-  color:#4169e1;
+  color:#2A6F97;
 }
 .whiteTr{
   color:white;
@@ -177,7 +179,7 @@ body {
   margin-top:20px;
   /*transform:translatez(60px) scale();*/
   
-  background-color:#4169e1;
+  background-color:#2A6F97;
   border-radius:6px;
   padding:10px 30px;
   box-sizing:border-box;
@@ -189,11 +191,11 @@ body {
 
 
 .orangeTr {
-  color: #1e90ff; /* Light blue */
+  color:#D4F1F4; /* Light blue */
 }
 
 .whiteTr {
-  color: #4169e1; /* Dark blue */
+  color: #2A6F97; /* Dark blue */
 }
 
 
