--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -598,7 +598,7 @@ section {
 .section-title p {
   margin-bottom: 0;
   font-size: 14px;
-  color: #0e5287;
+  color: #ade8f4;
 }
 
 /*--------------------------------------------------------------
@@ -694,7 +694,7 @@ section {
   display: block;
   font-size: 24px;
   font-weight: 400;
-  color: #ade8f4;
+  color: #013A63;
 }
 
 .why-us .content-item h4 {
@@ -705,7 +705,7 @@ section {
 }
 
 .why-us .content-item p {
-  color: #0e5287;
+  color: #2A6F97;
   font-size: 15px;
   margin: 0;
   padding: 0;
@@ -782,7 +782,7 @@ section {
 
 .services .icon-box .icon svg path {
   transition: 0.5s;
-  fill: #ade8f4;
+  fill: #D4F1F4;
 }
 
 .services .icon-box h4 {
@@ -792,7 +792,7 @@ section {
 }
 
 .services .icon-box h4 a {
-  color: #ade8f4;
+  color: #2A6F97;
   transition: ease-in-out 0.3s;
 }
 
@@ -1177,8 +1177,8 @@ section {
 # Contact
 --------------------------------------------------------------*/
 .contact .info {
-  border-top: 3px solid #0e5287;
-  border-bottom: 3px solid #0e5287;
+  border-top: 3px solid #5cb874;
+  border-bottom: 3px solid #5cb874;
   padding: 30px;
   background: #fff;
   width: 100%;
@@ -1211,7 +1211,7 @@ section {
   padding: 0 0 10px 60px;
   margin-bottom: 20px;
   font-size: 14px;
-  color: #90e0ef;
+  color: #0E5287;
 }
 
 .contact .info .social-links {
@@ -1234,7 +1234,7 @@ section {
 }
 
 .contact .info .social-links a:hover {
-  background: #0e5287;
+  background: #5cb874;
   color: #fff;
 }
 
@@ -1247,8 +1247,8 @@ section {
 
 .contact .php-email-form {
   width: 100%;
-  border-top: 3px solid #0e5287;
-  border-bottom: 3px solid #0e5287;
+  border-top: 3px solid #5cb874;
+  border-bottom: 3px solid #5cb874;
   padding: 30px;
   background: #fff;
   box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.12);
